--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -15,6 +15,9 @@
           "maxEOF": 1
         }
       ],
-      "object-curly-newline": 0
+      "object-curly-newline": 0,
+      "parserOptions": {
+    "sourceType": "module"
     }
+}
 }
